runcher/1Deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: queue-punthai-frontend-web
  namespace: queue-punthai
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: queue-punthai-frontend-web
  template:
    metadata:
      labels:
        app: queue-punthai-frontend-web
    spec:
      containers:
        - name: queue-punthai-frontend-web
          image: queue-punthai-web:v0.2devops
          # resources:
          #   limits:
          #     cpu: "1G"
          #     memory: "1Gi"
          volumeMounts:
            - name: appsettings-k8s
              mountPath: /app/appsetting.json
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      imagePullSecrets:      
        - name: queue-punthai-registry-secret
      volumes:
        - name: appsettings-k8s
          projected:
            sources:
            - configMap: 
                name: frontend-queue-configmap
