runcher/2Service.yaml
kind: Service
apiVersion: v1
metadata:
  name: queue-punthai-frontend-web-service
  namespace: queue-punthai
spec:
  type: LoadBalancer
  #ClusterIP
  #LoadBalancer
  #NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: queue-punthai-frontend-web
